--- a/frontend/css/chess.css
+++ b/frontend/css/chess.css
@@ -58,7 +58,7 @@
 .notation-322f9 {
     cursor: default;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 1.3em;
+    font-size: 10px;
     position: absolute;
 }
 .alpha-d2270 {
